--- a/index.css
+++ b/index.css
@@ -103,8 +103,8 @@ body {
 
 .card:hover {
   z-index: 999;
-  transform: scale(1.2);
-  transition: transform 0.2s ease-in;
+  /* transform: scale(1.2);
+  transition: transform 0.2s ease-in; */
   /* margin-left: 20px;
   margin-right: 20px; */
   box-shadow: 0px 0px 20px black;
@@ -433,6 +433,19 @@ i.fa.fa-sort-up {
 @media only screen and (min-device-width: 481px) and (max-device-width: 786px) {
   .card {
     margin-bottom: 20px;
+  }
+}
+
+@media only screen and (min-device-width: 481px) {
+  .card:hover {
+    transform: scale(1.2);
+    transition: transform 0.2s ease-in;
+  }
+}
+
+@media only screen and (max-device-height: 640px) {
+  #background {
+    bottom: 55%;
   }
 }
 
